20_Netpol/20-03_Namespace/db10-netpol.yaml
# Exercise 20-03 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db10-netpol
  namespace: database-ns
spec:
  podSelector:
    matchLabels:
      pod: db10-pod
  policyTypes:
    - Egress
